# apricots

./: .gitignore  CMakeLists.txt  SDLfont.h  apricots.h  game.cpp  init.cpp  menu.cpp  sampleio.cpp  sampleio.h  shape.h  sys_specifics.h
